# Regatta_Race_Suite

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  check_signing_policy.rb  fix_grdb.rb  fix_infoplist.rb  fix_signing.rb  justfile  package-lock.json  package.json  patch_entitlements.rb  patch_xcode.rb  patch_xcode_all.rb  plan_request.md  update_pbxproj.rb
.github/workflows/: frontend-ci.yml  rust-ci.yml  validation-check.yml
apps/regatta-mac/: README.md  build_log.txt  build_out_mac.txt  build_output.txt  build_output_10.txt  build_output_11.txt  build_output_12.txt  build_output_13.txt  build_output_14.txt  build_output_15.txt  build_output_16.txt  build_output_17.txt  build_output_18.txt  build_output_19.txt  build_output_20.txt  build_output_21.txt  build_output_22.txt  build_output_23.txt  build_output_24.txt  build_output_25.txt  build_output_26.txt  build_output_27.txt  build_output_28.txt  build_output_29.txt  build_output_3.txt  build_output_30.txt  build_output_31.txt  build_output_32.txt  build_output_33.txt  build_output_4.txt  build_output_5.txt  build_output_6.txt  build_output_7.txt  build_output_8.txt  build_output_9.txt  build_output_final.txt  project.yml
backend/: package-lock.json  package.json  state.json
backend-rust/: Cargo.toml  Dockerfile  fly.toml  state.json
backend-rust/aws/: 001_aurora_schema.sql  002_kinesis_s3_config.sh  deploy.sh  task-definition.json
backend-rust/src/: audit.rs  auth.rs  auto_director.rs  cloud_sync.rs  edge_network.rs  flight_engine.rs  handlers.rs  main.rs  persistence.rs  procedure_engine.rs  ranking_engine.rs  state.rs  trilateration.rs  uwb_hub.rs
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
regatta-core/: package-lock.json  package.json  tsconfig.json
regatta-tracker-ios/: App.tsx  app.json  package-lock.json  package.json
specs/: 3d_map_upgrade.md  features.md  system_integration.md
(+144 files in other folders)
