[workspace]
members = [
    "backend-rust",
    "packages/uwb-types",
    "packages/uwb-simulator",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Regatta Suite"]
license = "UNLICENSED"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws"] }

# WebSocket / Socket.IO
socketioxide = { version = "0.14" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Binary serialization (for UWB packets)
bytemuck = { version = "1", features = ["derive"] }
bytes = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Crypto (SHA-256 audit chain)
sha2 = "0.10"
hex = "0.4"

# JWT validation (Supabase auth)
jsonwebtoken = "9"

# HTTP client (for Supabase REST API)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Database (future: Supabase / PostgreSQL)
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono"] }

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Time
chrono = { version = "0.4", features = ["serde"] }
