[package]
name = "regatta-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "regatta-backend"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
socketioxide = { version = "0.15", features = ["state"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
tower = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
